--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/Renta25/Versioner_auth_service#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mariadb": "^2.5.2",
     "morgan": "^1.10.0"
   }
 }
